--- a/ASP.Server/Views/Genre/List.cshtml
+++ b/ASP.Server/Views/Genre/List.cshtml
@@ -10,6 +10,9 @@
     <!-- la liste des genres est dans la variable Model qui est typé en ligne 3, elle correspond à la variable xxx dans View(xxx) du controller -->
     @foreach (var genre in Model)
     {
+        <div class="genre">
+			<h2>@genre.Name</h2>
+		</div>
     }
 </div>
 
