--- a/ASP.Server/Views/Genre/List.cshtml
+++ b/ASP.Server/Views/Genre/List.cshtml
@@ -8,12 +8,13 @@
 <div class="listeGenres">
     <h1>Liste des Genres:</h1>
     <!-- la liste des genres est dans la variable Model qui est typé en ligne 3, elle correspond à la variable xxx dans View(xxx) du controller -->
+    <p>Nombre de genres: @Model.Count()</p>
     @foreach (var genre in Model)
-    {
-        <div class="genre">
+	{
+		<div class="genre">
 			<h2>@genre.Name</h2>
 		</div>
-    }
+	}
 </div>
 
 
