--- a/ASP.Server/Views/Book/List.cshtml
+++ b/ASP.Server/Views/Book/List.cshtml
@@ -11,7 +11,7 @@
     {
         <div class="book">
 			<h2>@book.Name</h2>
-			@* <p>@book.Author.Name</p> *@
+			<p>@book.Author.Name</p>
 			<p>@book.Price</p>
 			
 		</div>
