update books handled

--- a/ASP.Server/Views/Book/List.cshtml
+++ b/ASP.Server/Views/Book/List.cshtml
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <!-- Anchor tag to navigate to the update page -->
-                <a href="/update/@book.Id">Update</a>
+                <a href="/Book/update/@book.Id">Update</a>
             </div>
             <div class="d-flex justify-content-center align-items-center flex-grow-1">
                 <form method="post" action="/delete/@book.Id">
