--- a/ASP.Server/Views/Book/Create.cshtml
+++ b/ASP.Server/Views/Book/Create.cshtml
@@ -24,32 +24,38 @@ label {
     <div class="input-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" />
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
-    <span asp-validation-for="Name" class="text-danger"></span>
+    
     
     <div class="input-group">
-            <label asp-for="Author"></label>
-            <input asp-for="Author" />
+        <label asp-for="Author"></label>
+        <input asp-for="Author" />
+        <span asp-validation-for="Author" class="text-danger"></span>
     </div>
-    <span asp-validation-for="Author" class="text-danger"></span>
+    
     
     <div class="input-group">
-                    <label asp-for="Price"></label>
-                    <input asp-for="Price" />
+        <label asp-for="Price"></label>
+        <input asp-for="Price" />
+        <span asp-validation-for="Price" class="text-danger"></span>
     </div>
-    <span asp-validation-for="Price" class="text-danger"></span>
+    
     
     <div class="input-group">
-                    <label asp-for="Content"></label>
-                    <input asp-for="Content" />
+        <label asp-for="Content"></label>
+        <input asp-for="Content" />
+        <span asp-validation-for="Content" class="text-danger"></span>
     </div>
-    <span asp-validation-for="Content" class="text-danger"></span>
+    
+    
     <div class="input-group">
         <label asp-for="Genres"></label>
         <!--Si la page rend une erreur a cette ligne, c'est que vous n'avez pas envoyé la liste des genres dans le Controller !!! ! -->
-        <select asp-for="Genres" asp-items="@(new SelectList(Model.AllGenres,"Id","Id"))">
+        <select asp-for="Genres" asp-items="@(new SelectList(Model.AllGenres, "Id", "Name"))" multiple="multiple">
         </select>
+        <span asp-validation-for="Genres" class="text-danger"></span>
     </div>
-    <span asp-validation-for="Genres" class="text-danger"></span>
+    
     <input type="submit" value="Add" style="width: 100%; margin-top: 50px" />
 </form>
