--- a/ASP.Server/Views/Book/List.cshtml
+++ b/ASP.Server/Views/Book/List.cshtml
@@ -33,7 +33,7 @@
                 <a href="/Book/update/@book.Id">Update</a>
             </div>
             <div class="d-flex justify-content-center align-items-center flex-grow-1">
-                <form method="post" action="/delete/@book.Id">
+                <form method="post" action="/Book/delete/@book.Id">
                     <div class="d-flex justify-content-center align-items-center flex-grow-1">
                         <button type="submit" class="p-3 text-white rounded bg-danger">DELETE</button>
                     </div>
