--- a/ASP.Server/Views/Genre/List.cshtml
+++ b/ASP.Server/Views/Genre/List.cshtml
@@ -75,7 +75,7 @@
 
     <div class="add-button">
         <form method="post" action="/Genre/Create">
-            <button type="submit">Ajouter</button>
+            <button type="submit">Add</button>
         </form>
     </div>
 
@@ -85,7 +85,7 @@
             <h2>@genre.Name</h2>
 
             <form method="post" action="/Genre/Delete/@genre.Id">
-                <button type="submit">Supprimer</button>
+                <button type="submit">Delete</button>
             </form>
         </div>
     }
