--- a/ASP.Server/Views/Book/Create.cshtml
+++ b/ASP.Server/Views/Book/Create.cshtml
@@ -63,8 +63,9 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="Author">Author</label>
-        <input asp-for="Author" />
+        <label asp-for="Authors">Authors</label>
+        <span class="text-muted" style="font-size:small">Separate authors with a comma</span>
+        <input asp-for="Authors" />
     </div>
 
     <div class="form-group">
