--- a/ASP.Server/Views/Shared/_Layout.cshtml
+++ b/ASP.Server/Views/Shared/_Layout.cshtml
@@ -58,6 +58,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Genre" asp-action="Create">Add new genre</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Stats">Stats</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav float-right">
                         <li class="nav-item float-right">
