--- a/MAUI.Reader/AppShell.xaml
+++ b/MAUI.Reader/AppShell.xaml
@@ -6,12 +6,14 @@
        Shell.FlyoutBehavior="Disabled"
        Title="MAUI.Reader"
        Shell.NavBarIsVisible="false"
-       x:Name="shellMain">
-
-    <FlyoutItem Route="root">
-        <ShellContent Title="Liste des livres"
-                      ContentTemplate="{DataTemplate local:ListBooks}"
-                      Route="list" />
-    </FlyoutItem>
-
+       x:Name="shellMain"
+       BackgroundColor="Black">
+    <TabBar>
+        <Tab>
+            <ShellContent Title="Books" 
+                          ContentTemplate="{DataTemplate local:ListBooks}" />
+            <ShellContent Title="Genres"
+                          ContentTemplate="{DataTemplate local:ListCategories}" />
+        </Tab>
+    </TabBar>
 </Shell>
